---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn wibble(x: List<Int>) { x }\nfn main(y: List<something>) {\n  wibble(y)\n}"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:4:10
  │
4 │   wibble(y)
  │          ^

Expected type:

    List<Int>

Found type:

    List<something>
